--- a/dotfiles/vscode/settings.json
+++ b/dotfiles/vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "vscode://schemas/settings/user",
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -45,6 +46,7 @@
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "files.associations": {
     "*.css": "tailwindcss"
