Install biome via brwe

--- a/dotfiles/vscode/settings.json
+++ b/dotfiles/vscode/settings.json
@@ -28,7 +28,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
 
-  "oxc.enable": false,
+  "biome.requireConfiguration": true,
+  "oxc.requireConfig": true,
 
   "cSpell.userWords": [
     "agentcommercekit",
