--- a/dotfiles/vscode/settings.json
+++ b/dotfiles/vscode/settings.json
@@ -66,7 +66,7 @@
   "typescript.updateImportsOnFileMove.enabled": "always",
   "update.releaseTrack": "prerelease",
   "vim.useSystemClipboard": true,
-  "window.commandCenter": 1,
+  "window.commandCenter": true,
   "workbench.colorTheme": "Dracula Theme",
   "git.autofetch": true
 }
