Add local gitconfigs for signing keys

--- a/dotfiles/config/ghostty/config
+++ b/dotfiles/config/ghostty/config
@@ -20,3 +20,4 @@ macos-titlebar-proxy-icon = hidden
 unfocused-split-opacity = 1
 cursor-style = block
 shell-integration-features = no-cursor
+keybind = shift+enter=text:\n
