Only show boundary whitespace in zed

--- a/dotfiles/config/zed/settings.json
+++ b/dotfiles/config/zed/settings.json
@@ -15,7 +15,8 @@
   "base_keymap": "VSCode",
   "ui_font_size": 14,
   "buffer_font_size": 13,
-  "show_whitespaces": "all",
+  "relative_line_numbers": true,
+  "show_whitespaces": "boundary",
   "tab_size": 2,
   "theme": "One Dark",
   "format_on_save": "on",
