--- a/dotfiles/config/ghostty/config
+++ b/dotfiles/config/ghostty/config
@@ -1,32 +1,12 @@
-# This is the configuration file for Ghostty.
-#
-# The template does not set any default options, since Ghostty ships
-# with sensible defaults for all options. Users should only need to set
-# options that they want to change from the default.
-#
-# Run `ghostty +show-config --default --docs` to view a list of
-# all available config options and their default values.
-#
-# Additionally, each config option is also explained in detail
-# on Ghostty's website, at https://ghostty.org/docs/config.
-
-theme = Github-Dark-Dimmed
-
-# cursor
+theme = "Github Dark Dimmed"
 cursor-color = #B62EB2
 cursor-style = block
-shell-integration-features = no-cursor
-
-# icon
 macos-icon = custom-style
 macos-icon-ghost-color = #FFFFFF
 macos-icon-screen-color = #000000
-
-# mac styles
 macos-titlebar-style = tabs
 macos-titlebar-proxy-icon = hidden
-
-# misc
 keybind = shift+enter=text:\n
+shell-integration-features = no-cursor
 split-divider-color = #222
 unfocused-split-opacity = 1
