Back to Dracula theme

--- a/dotfiles/config/ghostty/config
+++ b/dotfiles/config/ghostty/config
@@ -1,4 +1,5 @@
-theme = "Github Dark Dimmed"
+# theme = "Github Dark Dimmed"
+theme = "Dracula"
 cursor-color = #B62EB2
 cursor-style = block
 macos-icon = custom-style
