--- a/dotfiles/vscode/settings.json
+++ b/dotfiles/vscode/settings.json
@@ -51,7 +51,7 @@
   "update.releaseTrack": "prerelease",
   "vim.useSystemClipboard": true,
   "window.commandCenter": true,
-  "workbench.colorTheme": "ZED One Theme Dark",
+  "workbench.colorTheme": "Dracula Theme",
 
   // Spelling
   "cSpell.userWords": [
