Fix code action on save for zed

--- a/dotfiles/config/zed/settings.json
+++ b/dotfiles/config/zed/settings.json
@@ -23,9 +23,7 @@
   "formatter": [
     "prettier",
     {
-      "code_actions": {
-        "source.fixAll.eslint": true
-      }
+      "code_action": "source.fixAll.eslint"
     }
   ]
 }
