--- a/dotfiles/config/zed/settings.json
+++ b/dotfiles/config/zed/settings.json
@@ -7,6 +7,10 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "agent": {
+    "play_sound_when_agent_done": true,
+    "model_parameters": []
+  },
   "telemetry": {
     "metrics": false,
     "diagnostics": false
