--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -3,8 +3,13 @@
 # This won't be added again if you remove it.
 Include ~/.orbstack/ssh/config
 
-Host github.com
+Include ~/.ssh/config.local
+
+Host *
   AddKeysToAgent yes
   UseKeychain yes
+  IdentitiesOnly yes
+
+Host github.com
   IdentityFile ~/.ssh/id_ed25519_github
 
