Use shared git commit prompt for claude-code, opencode

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -69,7 +69,9 @@
   # Clean branches, including squash-and-merged
   # From https://github.com/not-an-aardvark/git-delete-squashed
   cleanup = "!f() { local targetBranch=${1:-main} && git checkout -q $targetBranch && git branch --merged | grep -v \"\\*\" | xargs -n 1 git branch -d && git for-each-ref refs/heads/ \"--format=%(refname:short)\" | while read branch; do mergeBase=$(git merge-base $targetBranch $branch) && [[ $(git cherry $targetBranch $(git commit-tree $(git rev-parse $branch^{tree}) -p $mergeBase -m _)) == \"-\"* ]] && git branch -D $branch; done; }; f"
-  claude = "!f() { msg=$(claude -p \"Look at the staged git changes and create a summarizing git commit title. Only respond with the title and no affirmation.\"); git commit -m \"$msg\"; }; f"
+  # Claude Code and Opencode commit messages
+  claude = "!f() { msg=$(claude -p \"$(cat ~/.config/git/commit-prompt.txt)\"); git commit -m \"$msg\"; }; f"
+  oc = "!f() { msg=$(opencode -p \"$(cat ~/.config/git/commit-prompt.txt)\"); git commit -m \"$msg\"; }; f"
   # GH CLI
   poi = "!gh poi"
   pr = "!gh pr"
