Update ghostty to setup terminfo entry upon ssh

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,8 @@
 # Claude
 keybind = shift+enter=text:\x1b\r
 
+# ssh
+shell-integration-features = ssh-terminfo,ssh-env
+
 # Theme
 theme = tokyonight
