TokyoNight Night theme

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,7 @@
 # Ghostty config: https://ghostty.org/docs/config/reference
 # Visual editor: https://ghostty.zerebos.com/
 
-theme = Kanagawa Wave
+theme = TokyoNight Night
 copy-on-select = true
 keybind = shift+enter=text:\x1b\r
 shell-integration-features = ssh-terminfo,ssh-env
