Add bun to mise.toml

--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -1,7 +1,8 @@
 [tools]
-node = 'lts'
-python = '3'
-rust = 'stable'
+bun = "latest"
+node = "lts"
+python = "3"
+rust = "stable"
 
 # formatters
 "npm:prettier" = "latest"
