--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -67,7 +67,7 @@
   sync = "!f() { BRANCH=${1:-main}; git checkout $BRANCH && git fetch --all --prune && git pull; }; f"
   # Clean branches, including squash-and-merged
   # From https://github.com/not-an-aardvark/git-delete-squashed
-  cleanup = "!f() { local targetBranch=${1:-main} && git checkout -q $targetBranch && git branch --merged | grep -v \"\\*\" | xargs -n 1 git branch -d && git for-each-ref refs/heads/ \"--format=%(refname:short)\" | while read branch; do mergeBase=$(git merge-base $targetBranch $branch) && [[ $(git cherry $targetBranch $(git commit-tree $(git rev-parse $branch^{tree}) -p $mergeBase -m _)) == \"-\"* ]] && git branch -D $branch; done; }; f"
+  cleanup = "!f() { local targetBranch=${1:-main} && git checkout -q $targetBranch && git branch --merged | grep -v \"\\*\" | xargs -n 1 git branch -d && git for-each-ref refs/heads/ \"--format=%(refname:short)\" | while read branch; do [ \"$branch\" = \"$targetBranch\" ] && continue; [ \"$(git rev-list --count $targetBranch..$branch)\" = \"0\" ] && git branch -D $branch && continue; mergeBase=$(git merge-base $targetBranch $branch) && [[ $(git cherry $targetBranch $(git commit-tree $(git rev-parse $branch\\^{tree}) -p $mergeBase -m _)) == \"-\"* ]] && git branch -D $branch; done; }; f"
   # Claude Code and Opencode commit messages
   claude = "!f() { msg=$(claude -p \"$(cat ~/.config/git/commit-prompt.txt)\"); git commit -m \"$msg\"; }; f"
   oc = "!f() { msg=$(opencode -p \"$(cat ~/.config/git/commit-prompt.txt)\"); git commit -m \"$msg\"; }; f"
