--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -1,7 +1,9 @@
 [tools]
 bun = "latest"
-node = "lts"
-python = "3"
+foundry = "latest"
+node = "latest"
+python = "latest"
+ruby = "latest"
 rust = "stable"
 
 # formatters
