Add more claude-specific settings

--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -7,5 +7,7 @@ rust = "stable"
 
 # formatters
 "npm:prettier" = "latest"
+"npm:oxlint" = "latest"
+"npm:oxfmt" = "latest"
 shfmt = "latest"
 stylua = "latest"
