--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -1,26 +1,26 @@
 {
   "telemetry": {
     "diagnostics": false,
-    "metrics": false,
+    "metrics": false
   },
   "vim_mode": true,
   "icon_theme": {
     "mode": "dark",
     "light": "Zed (Default)",
-    "dark": "Zed (Default)",
+    "dark": "Zed (Default)"
   },
   "ui_font_size": 16,
   "buffer_font_size": 14,
   "theme": {
     "mode": "dark",
     "light": "Ayu Dark",
-    "dark": "Ayu Dark",
+    "dark": "Ayu Dark"
   },
   "agent_servers": {
     "OpenCode": {
       "type": "custom",
       "command": "opencode",
-      "args": ["acp"],
-    },
-  },
+      "args": ["acp"]
+    }
+  }
 }
