--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -8,6 +8,7 @@ rust = "stable"
 # formatters
 "npm:prettier" = "latest"
 "npm:oxlint" = "latest"
+"npm:oxlint-tsgolint" = "latest"
 "npm:oxfmt" = "latest"
 shfmt = "latest"
 stylua = "latest"
