Add awscli to global packages

--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -12,3 +12,4 @@ rust = "stable"
 "npm:oxfmt" = "latest"
 shfmt = "latest"
 stylua = "latest"
+awscli = { version = "latest", symlink_bins = "true" }
