--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -1,20 +1,41 @@
 {
+  "$schema": "zed://schemas/settings",
+
   "telemetry": {
     "diagnostics": false,
     "metrics": false
   },
+
+  // Theme
+  "theme": "One Dark",
+  "icon_theme": "Zed (Default)",
+
+  // Editor
   "vim_mode": true,
-  "icon_theme": {
-    "mode": "dark",
-    "light": "Zed (Default)",
-    "dark": "Zed (Default)"
-  },
   "ui_font_size": 16,
-  "buffer_font_size": 14,
-  "theme": {
-    "mode": "dark",
-    "light": "Ayu Dark",
-    "dark": "Ayu Dark"
+  "buffer_font_size": 13,
+  "relative_line_numbers": "enabled",
+
+  // Extensions
+  "auto_install_extensions": {
+    "astro": true,
+    "dockerfile": true,
+    "html": true,
+    "git-firefly": true,
+    "make": true,
+    "rainbow-csv": true,
+    "ruff": true,
+    "sql": true,
+    "terraform": true,
+    "toml": true
+  },
+
+  // AI
+  "agent": {
+    "inline_assistant_model": {
+      "provider": "anthropic",
+      "model": "claude-opus-4-5-latest"
+    }
   },
   "agent_servers": {
     "OpenCode": {
