--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -8,6 +8,7 @@ uv = "latest"
 shfmt = "latest"
 stylua = "latest"
 awscli = { version = "latest", symlink_bins = true }
+"npm:@mariozechner/pi-coding-agent" = "latest"
 "npm:@openai/codex" = "latest"
 "npm:fixjson" = "latest"
 "npm:prettier" = "latest"
