More openclaw setup

--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -8,10 +8,15 @@ uv = "latest"
 shfmt = "latest"
 stylua = "latest"
 awscli = { version = "latest", symlink_bins = true }
-"npm:@mariozechner/pi-coding-agent" = "latest"
-"npm:@openai/codex" = "latest"
+
+# tools
 "npm:fixjson" = "latest"
-"npm:prettier" = "latest"
 "npm:oxlint" = "latest"
 "npm:oxlint-tsgolint" = "latest"
 "npm:oxfmt" = "latest"
+"npm:prettier" = "latest"
+
+# ai
+"npm:@mariozechner/pi-coding-agent" = "latest"
+"npm:@openai/codex" = "latest"
+"npm:openclaw" = "latest"
